--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,36 +5,7 @@
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>Servlet</display-name>
-    <servlet-name>Servlet</servlet-name>
-    <servlet-class>servlet.Servlet</servlet-class>
-    <init-param>
-      <param-name>driverClass</param-name>
-      <param-value>com.mysql.jdbc.Driver</param-value>
-    </init-param>
-    <init-param>
-      <param-name>user</param-name>
-      <param-value>root</param-value>
-    </init-param>
-    <init-param>
-      <param-name>password</param-name>
-      <param-value>root</param-value>
-    </init-param>
-    <init-param>
-      <param-name>url</param-name>
-      <param-value>jdbc:mysql://localhost:3306/usermanage</param-value>
-    </init-param>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Servlet</servlet-name>
-    <url-pattern>/Servlet</url-pattern>
-  </servlet-mapping>
   <servlet>
     <description></description>
     <display-name>LoginServlet</display-name>
@@ -84,5 +55,56 @@
   <servlet-mapping>
     <servlet-name>UpdateUserServlet</servlet-name>
     <url-pattern>/UpdateUserServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AllUserInfoServlet</display-name>
+    <servlet-name>AllUserInfoServlet</servlet-name>
+    <servlet-class>servlet.AllUserInfoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AllUserInfoServlet</servlet-name>
+    <url-pattern>/AllUserInfoServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Init</display-name>
+    <servlet-name>Init</servlet-name>
+    <servlet-class>servlet.Init</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Init</servlet-name>
+    <url-pattern>/Init</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UpdateAdminServlet</display-name>
+    <servlet-name>UpdateAdminServlet</servlet-name>
+    <servlet-class>servlet.UpdateAdminServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UpdateAdminServlet</servlet-name>
+    <url-pattern>/UpdateAdminServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DeleteUserServlet</display-name>
+    <servlet-name>DeleteUserServlet</servlet-name>
+    <servlet-class>servlet.DeleteUserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteUserServlet</servlet-name>
+    <url-pattern>/DeleteUserServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SelectAdminServlet</display-name>
+    <servlet-name>SelectAdminServlet</servlet-name>
+    <servlet-class>servlet.SelectAdminServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SelectAdminServlet</servlet-name>
+    <url-pattern>/SelectAdminServlet</url-pattern>
   </servlet-mapping>
 </web-app>
